Added second line.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
       <p>It was a dark and stormy night...</p>
+      <p>There were sounds that were scary and creepy.</p>
     </body>
   </html>
